[Bug 669682] The Button "Galerie durchsuchen" in the German locale will be wrapped into a new row
See: https://bugzilla.mozilla.org/show_bug.cgi?id=669682

--- a/media/less/includes/editor-tools.less
+++ b/media/less/includes/editor-tools.less
@@ -230,12 +230,9 @@ section.marky {
     border-top: 1px solid #9ACCF7;
     display: block;
     padding: 7px 15px;
-
-    input[type="text"] {
-      background: url("../img/icon.searchloupe.png") no-repeat scroll 7px center #FFFFFF;
-      margin: 0 7px 0 0;
-      padding-left: 33px;
-      width: 500px;
+    
+    .simple-search-form#gallery-modal-search .submit-button {
+      right: 0;
     }
 
     div.type {
@@ -334,11 +331,6 @@ section.marky {
     div.placeholder {
       left: auto;
       right: 15px;
-    }
-
-    div.filter input[type="text"] {
-      padding-left: 5px;
-      padding-right: 33px;
     }
 
     div.type {
